--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             border-radius: 0 0 100% 0;
             height: 150px;
         }
+        .pill-image {
+            border-radius: 100px;
+            width: 180px;
+            height: 350px;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body class="bg-white text-gray-800">
@@ -39,14 +45,14 @@
     <section class="max-w-7xl mx-auto px-4 py-12">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-start">
             <div>
-                <h1 class="text-5xl font-light mb-8">Simplifique, Otimize, Rentabilize!</h1>
-                <div class="space-y-6 text-gray-600 leading-relaxed text-sm">
+                <h1 class="text-5xl font-light mb-8 italic">Simplifique, Otimize, Rentabilize!</h1>
+                <div class="space-y-6 text-gray-600 leading-relaxed">
                     <p>Na <span class="font-bold">FleetWise</span> desenvolvemos as soluções que não existem, reduzimos custos que pareciam insignificantes e fomentamos relações comerciais onde inicialmente não existiam Oportunidades. No fundo, fazemos muito com pouco!</p>
                     <p>Somos uma consultora com foco no negócio automóvel. Sugerimos soluções de mobilidade adequadas às suas necessidades de forma imparcial, desenvolvemos soluções à medida para mitigar perdas de tempo ou de recursos, sempre com um grande foco na eficiência e produtividade.</p>
                     <p>Tiramos partido da <span class="font-bold">IA</span> para nos ajudar no dia-a-dia e pretendemos que faça o mesmo!</p>
                 </div>
-                <div class="mt-12 overflow-hidden rounded-lg shadow-xl">
-                    <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?auto=format&fit=crop&q=80&w=800" alt="Car Detail" class="w-full h-64 object-cover">
+                <div class="mt-12 overflow-hidden rounded-lg shadow-xl h-64">
+                    <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?auto=format&fit=crop&q=80&w=800" alt="Car Detail" class="w-full h-full object-cover">
                 </div>
             </div>
 
@@ -63,64 +69,101 @@
 
     <div class="bg-custom-green curved-divider w-full"></div>
 
-    <section class="max-w-7xl mx-auto px-4 py-20">
+    <section class="max-w-7xl mx-auto px-4 py-20 border-b border-gray-100">
         <h2 class="text-4xl font-semibold mb-16">Os nossos serviços:</h2>
         
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-16">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-x-12 gap-y-20">
             <div>
                 <span class="number-accent">1</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Auditoria & Diagnóstico</h3>
-                <p class="text-sm text-gray-600 mb-6">Realizamos uma radiografia completa à sua frota atual para transformar os custos ocultos em liquidez. Por vezes, o valor da renda mensal esconde ineficiências contratuais e fiscais...</p>
+                <p class="text-sm text-gray-600 mb-6">Realizamos uma radiografia completa à sua frota atual para transformar os custos ocultos em liquidez. Por vezes, o valor da renda mensal esconde ineficiências contratuais e fiscais que passam despercebidas no dia-a-dia.</p>
                 <button class="bg-[#10b981] text-white px-6 py-2 rounded-full text-sm font-semibold hover:bg-emerald-600 transition">Simule já!</button>
             </div>
 
             <div>
                 <span class="number-accent">2</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Procurement & Negociação</h3>
-                <p class="text-sm text-gray-600 mb-6">Lideramos todo o processo de consulta de mercado (RFP), desafiando locadoras e concessionários para obter as condições mais competitivas.</p>
+                <p class="text-sm text-gray-600 mb-6">Lideramos todo o processo de consulta de mercado (RFP), desafiando locadoras e concessionários para obter as condições mais competitivas. Por vezes, o desconhecimento do mercado leva a decisões menos estruturadas.</p>
             </div>
 
             <div>
                 <span class="number-accent">3</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Gestão Operacional</h3>
-                <p class="text-sm text-gray-600 mb-6">Assumimos a gestão integral da sua frota em regime de outsourcing. Atuamos como o seu departamento de frota externo, libertando os seus recursos internos.</p>
+                <p class="text-sm text-gray-600 mb-6">Assumimos a gestão integral da sua frota em regime de outsourcing. Atuamos como o seu departamento de frota externo, libertando os seus recursos internos da carga administrativa diária.</p>
                 <button class="bg-[#10b981] text-white px-6 py-2 rounded-full text-sm font-semibold hover:bg-emerald-600 transition">Exemplos de soluções!</button>
             </div>
 
             <div>
                 <span class="number-accent">4</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Seguros Automóvel</h3>
-                <p class="text-sm text-gray-600">Desenhamos soluções de seguro automóvel à medida da sua frota, focadas na proteção real dos ativos e na otimização do TCO.</p>
+                <p class="text-sm text-gray-600">Desenhamos soluções de seguro automóvel à medida da sua frota, focadas na proteção real dos ativos e na otimização do TCO. Atuamos como o seu consultor de risco, desafiando o mercado segurador.</p>
             </div>
 
             <div>
                 <span class="number-accent">5</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Reparações & Recondicionamentos</h3>
-                <p class="text-sm text-gray-600">Proteja a sua empresa das penalizações de final de contrato. A FleetWise gere proativamente o estado das suas viaturas antes da devolução.</p>
+                <p class="text-sm text-gray-600">Proteja a sua empresa das penalizações de final de contrato. A FleetWise gere proativamente o estado das suas viaturas antes da devolução às locadoras, realizando pré-peritagens rigorosas.</p>
             </div>
 
             <div>
                 <span class="number-accent">6</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Soluções de Carregamento</h3>
-                <p class="text-sm text-gray-600">A transição para a mobilidade elétrica exige mais do que viaturas: um ecossistema de carregamento inteligente. Desenhamos e implementamos a infraestrutura ideal.</p>
+                <p class="text-sm text-gray-600">A transição para a mobilidade elétrica exige mais do que viaturas: um ecossistema de carregamento inteligente. Desenhamos e implementamos a infraestrutura ideal para a sua empresa.</p>
             </div>
         </div>
     </section>
 
-    <section class="py-20 bg-gray-50 overflow-hidden">
-        <div class="max-w-7xl mx-auto px-4 flex flex-col items-center">
-            <h2 class="text-4xl mb-12">Simule já!</h2>
-            <div class="flex justify-center items-center space-x-12">
-                <div class="w-48 h-96 rounded-full overflow-hidden border-8 border-white shadow-xl">
-                    <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?auto=format&fit=crop&q=80&w=400" alt="Mercedes" class="w-full h-full object-cover">
-                </div>
-                <button class="bg-[#10b981] text-white px-10 py-4 rounded-full text-lg font-bold hover:bg-emerald-600 transition shadow-lg">Simular!</button>
-                <div class="w-48 h-96 rounded-full overflow-hidden border-8 border-white shadow-xl">
-                    <img src="https://images.unsplash.com/photo-1632243193041-563d017a9dba?auto=format&fit=crop&q=80&w=400" alt="EV Car" class="w-full h-full object-cover">
-                </div>
+    <section class="py-24 bg-white overflow-hidden">
+        <div class="max-w-5xl mx-auto px-4 flex flex-col items-center">
+            <h2 class="text-5xl font-light mb-16">Simule já!</h2>
+            <div class="flex justify-center items-center space-x-8 md:space-x-20">
+                <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?auto=format&fit=crop&q=80&w=400" alt="Mercedes" class="pill-image border-8 border-gray-50 shadow-2xl hidden md:block">
+                <button class="bg-[#10b981] text-white px-12 py-5 rounded-full text-xl font-bold hover:bg-emerald-600 transition shadow-xl transform hover:scale-105">Simular!</button>
+                <img src="https://images.unsplash.com/photo-1632243193041-563d017a9dba?auto=format&fit=crop&q=80&w=400" alt="EV Car" class="pill-image border-8 border-gray-50 shadow-2xl hidden md:block">
             </div>
         </div>
     </section>
+
+    <footer class="bg-gray-50 pt-20 pb-10">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="flex flex-col md:flex-row justify-between items-start gap-12 mb-20">
+                <div class="md:w-2/3 space-y-6">
+                    <h2 class="text-3xl font-bold text-custom-green">Quem somos</h2>
+                    <p class="text-gray-700 leading-relaxed">
+                        A FleetWise nasceu com uma missão clara: transformar a gestão de frotas em Portugal, elevando-a de uma tarefa administrativa para um ativo estratégico.
+                    </p>
+                    <p class="text-gray-700 leading-relaxed">
+                        Num mercado marcado pela complexidade fiscal, volatilidade energética e burocracia, as empresas precisam de mais do que simples fornecedores, precisam de parceiros que defendam os seus interesses. Somos uma consultora independente, focada exclusivamente na otimização do Custo Total de Propriedade (TCO) e na eficiência operacional.
+                    </p>
+                    <p class="text-gray-700 leading-relaxed">
+                        Não vendemos carros. Desenhamos soluções de mobilidade que equilibram as necessidades dos seus Clientes com os objetivos financeiros da sua empresa.
+                    </p>
+                </div>
+
+                <div class="md:w-1/3 space-y-4 text-sm">
+                    <p class="font-bold text-gray-900 text-lg">FleetWise, Unipessoal</p>
+                    <p class="text-gray-600">Apartado *XPTO*<br>Portugal</p>
+                    <div class="flex items-center space-x-3 text-emerald-600 font-semibold py-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 005.474 5.474l.772-1.548a1 1 0 011.06-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
+                        </svg>
+                        <span>914 038 167</span>
+                    </div>
+                    <div class="flex items-center space-x-3 text-gray-700 font-medium">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
+                            <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
+                        </svg>
+                        <a href="mailto:geral@fleetwise.pt" class="hover:text-emerald-600 transition">geral@fleetwise.pt</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="border-t border-gray-200 pt-8 text-sm text-gray-500">
+                Copyright © FleetWise
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
