--- a/index.html
+++ b/index.html
@@ -83,32 +83,32 @@
             <div>
                 <span class="number-accent">2</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Procurement & Negociação</h3>
-                <p class="text-sm text-gray-600 mb-6">Lideramos todo o processo de consulta de mercado (RFP), desafiando locadoras e concessionários para obter as condições mais competitivas. Por vezes, o desconhecimento do mercado leva a decisões menos estruturadas.</p>
+                <p class="text-sm text-gray-600 mb-6">Lideramos todo o processo de consulta de mercado (RFP), desafiando locadoras e concessionários para obter as condições mais competititvas. Por vezes, o desconhecimento do mercado ou de determinadas ferramentas facilitam uma tomada de decisão menos estruturada, e portanto, mais dispendiosa. Nem sempre sabemos o que precisamos e dispomos de uma equipa de profissionais que levaram as decisões do seu negócio a Bom Porto.</p>
             </div>
 
             <div>
                 <span class="number-accent">3</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Gestão Operacional</h3>
-                <p class="text-sm text-gray-600 mb-6">Assumimos a gestão integral da sua frota em regime de outsourcing. Atuamos como o seu departamento de frota externo, libertando os seus recursos internos da carga administrativa diária.</p>
+                <p class="text-sm text-gray-600 mb-6">Assumimos a gestão integral da sua frota em regime de outsorcing. Atuamos como o seu departamento de frota externo, libertando os seus recursos internos da carga administrativa diária. Centralizamos a gestão de todos os serviços críticos - desde o cumprimento legal (IUC, IPO, Multas) à gestão de fornecedores (Seguros, VIa Verde, Telemetria, Combustíveis). No final do ciclo, gerimos o recondicionamento para evitar custos de devolução e potenciamos a venda (remarketing) de viaturas próprias, maximizando o retorno do seu imobilizado.</p>
                 <button class="bg-[#10b981] text-white px-6 py-2 rounded-full text-sm font-semibold hover:bg-emerald-600 transition">Exemplos de soluções!</button>
             </div>
 
             <div>
                 <span class="number-accent">4</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Seguros Automóvel</h3>
-                <p class="text-sm text-gray-600">Desenhamos soluções de seguro automóvel à medida da sua frota, focadas na proteção real dos ativos e na otimização do TCO. Atuamos como o seu consultor de risco, desafiando o mercado segurador.</p>
+                <p class="text-sm text-gray-600">Desenhamos soluções de seguro automóvel à medida da sua frota, focadas na proteção real dos ativos e na otimização do TCO. Atuamos como o seu consultor de risco, desafiando o mercado segurador para obter prémios competitivos sem comprometer as coberturas essenciais. Mais do que a mediação, asseguramos a gestão ativa de sinistros, defendendo os seus interesses nas peritagens e garantindo a rápida reposição da mobilidade para minimizar o downtime do seu negócio</p>
             </div>
 
             <div>
                 <span class="number-accent">5</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Reparações & Recondicionamentos</h3>
-                <p class="text-sm text-gray-600">Proteja a sua empresa das penalizações de final de contrato. A FleetWise gere proativamente o estado das suas viaturas antes da devolução às locadoras, realizando pré-peritagens rigorosas.</p>
+                <p class="text-sm text-gray-600">Proteja a sua empresa das penalizações de final de contrato. A FleetWise gere proativamente o estado das suas viaturas antes da devolução às locadoras. Realizamos pré-peritagens rigorosas baseadas nos manuais de 'Estado de Uso' (Fair Wear & Tear) e coordenamos reparações inteligentes (smart repair), garantindo que apenas repara o estritamente necessário e ao custo mais baixo. Transformamos custos de recondicionamento imprevisíveis em investimentos controlados e reduzidos.</p>
             </div>
 
             <div>
                 <span class="number-accent">6</span>
                 <h3 class="text-xl font-bold mt-4 mb-4">Soluções de Carregamento</h3>
-                <p class="text-sm text-gray-600">A transição para a mobilidade elétrica exige mais do que viaturas: um ecossistema de carregamento inteligente. Desenhamos e implementamos a infraestrutura ideal para a sua empresa.</p>
+                <p class="text-sm text-gray-600">A transição para a mobilidade elétrica exige mais do que viaturas: um ecossistema de carregamento inteligente. Desenhamos e implementamos a infraestrutura ideal para a sua empresa. A nossa abordagem garante que a sua frota está sempre operacional, ao menor custo por kWh, com uma gestão centralizada de consumos e custos.</p>
             </div>
         </div>
     </section>
