--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <div class="space-y-6">
                 <div class="rounded-lg overflow-hidden shadow-lg h-64">
-                    <img src="https://images.unsplash.com/photo-1617469767053-d3b523a0b982?auto=format&fit=crop&q=80&w=800" alt="Polestar" class="w-full h-full object-cover">
+                    <img src="Polestar_4-6-1024x577.jpg" alt="Polestar" class="w-full h-full object-cover">
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg h-[400px]">
                     <img src="https://images.unsplash.com/photo-1555212697-194d092e3b8f?auto=format&fit=crop&q=80&w=800" alt="BMW" class="w-full h-full object-cover">
