--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <img src="Polestar_4-6-1024x577.jpg" alt="Polestar" class="w-full h-full object-cover">
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg h-[400px]">
-                    <img src="https://images.unsplash.com/photo-1555212697-194d092e3b8f?auto=format&fit=crop&q=80&w=800" alt="BMW" class="w-full h-full object-cover">
+                    <img src="53615141658_44ec4a59e3_o.webp" alt="BMW" class="w-full h-full object-cover">
                 </div>
             </div>
         </div>
