--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>Tiramos partido da <span class="font-bold">IA</span> para nos ajudar no dia-a-dia e pretendemos que faça o mesmo!</p>
                 </div>
                 <div class="mt-12 overflow-hidden rounded-lg shadow-xl h-64">
-                    <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?auto=format&fit=crop&q=80&w=800" alt="Car Detail" class="w-full h-full object-cover">
+                    <img src="Tesla-Model-Y-Portugal.webp" alt="Car Detail" class="w-full h-full object-cover">
                 </div>
             </div>
 
