--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         .pill-image { border-radius: 100px; width: 180px; height: 350px; object-fit: cover; }
         h1, h2, h3 { font-weight: 500; letter-spacing: -0.01em; }
         
-        .crop-top-20 { object-fit: cover; object-position: center 20%; }
+        /* Garantir alinhamento e proporção fixa */
+        .img-hero-large { aspect-ratio: 16 / 9; width: 100%; object-fit: cover; }
+        .img-hero-side-top { aspect-ratio: 16 / 10; width: 100%; object-fit: cover; }
+        .img-hero-side-bottom { flex-grow: 1; width: 100%; object-fit: cover; object-position: center 20%; }
 
         .sticky-header {
             position: fixed;
@@ -51,26 +54,28 @@
     </header>
 
     <section class="max-w-7xl mx-auto px-4 py-12">
-        <div class="flex flex-col md:flex-row gap-12 items-start">
+        <div class="flex flex-col md:flex-row gap-8 items-stretch">
             
-            <div class="md:w-[70%]">
-                <h1 class="text-5xl font-light mb-8">Simplifique, Otimize, Rentabilize!</h1>
-                <div class="space-y-6 text-gray-600 leading-relaxed">
-                    <p>Na <span class="font-bold">FleetWise</span> desenvolvemos as soluções que não existem, reduzimos custos que pareciam insignificantes e fomentamos relações comerciais onde inicialmente não existiam Oportunidades. No fundo, fazemos muito com pouco!</p>
-                    <p>Somos uma consultora com foco no negócio automóvel. Sugerimos soluções de mobilidade adequadas às suas necessidades de forma imparcial, desenvolvemos soluções à medida para mitigar perdas de tempo ou de recursos, sempre com um grande foco na eficiência e produtividade.</p>
-                    <p>Tiramos partido da <span class="font-bold">IA</span> para nos ajudar no dia-a-dia e pretendemos que faça o mesmo!</p>
+            <div class="md:w-[70%] flex flex-col">
+                <div class="mb-auto">
+                    <h1 class="text-5xl font-light mb-8">Simplifique, Otimize, Rentabilize!</h1>
+                    <div class="space-y-6 text-gray-600 leading-relaxed">
+                        <p>Na <span class="font-bold">FleetWise</span> desenvolvemos as soluções que não existem, reduzimos custos que pareciam insignificantes e fomentamos relações comerciais onde inicialmente não existiam Oportunidades. No fundo, fazemos muito com pouco!</p>
+                        <p>Somos uma consultora com foco no negócio automóvel. Sugerimos soluções de mobilidade adequadas às suas necessidades de forma imparcial, desenvolvemos soluções à medida para mitigar perdas de tempo ou de recursos, sempre com um grande foco na eficiência e produtividade.</p>
+                        <p>Tiramos partido da <span class="font-bold text-gray-800">IA</span> para nos ajudar no dia-a-dia e pretendemos que faça o mesmo!</p>
+                    </div>
                 </div>
-                <div class="mt-12 overflow-hidden rounded-lg shadow-xl h-64">
-                    <img src="Tesla-Model-Y-Portugal.webp" alt="Tesla" class="w-full h-full object-cover">
+                <div class="mt-8 overflow-hidden rounded-lg shadow-xl">
+                    <img src="Tesla-Model-Y-Portugal.webp" alt="Tesla" class="img-hero-large">
                 </div>
             </div>
 
-            <div class="md:w-[30%] space-y-6">
-                <div class="rounded-lg overflow-hidden shadow-lg h-64">
-                    <img src="Polestar_4-6-1024x577.jpg" alt="Polestar" class="w-full h-full object-cover">
+            <div class="md:w-[30%] flex flex-col gap-8">
+                <div class="rounded-lg overflow-hidden shadow-lg">
+                    <img src="Polestar_4-6-1024x577.jpg" alt="Polestar" class="img-hero-side-top">
                 </div>
-                <div class="rounded-lg overflow-hidden shadow-lg h-[400px]">
-                    <img src="53615141658_44ec4a59e3_o.webp" alt="BMW" class="w-full h-full crop-top-20">
+                <div class="rounded-lg overflow-hidden shadow-lg flex flex-col flex-grow">
+                    <img src="53615141658_44ec4a59e3_o.webp" alt="BMW" class="img-hero-side-bottom">
                 </div>
             </div>
         </div>
@@ -143,7 +148,7 @@
     <footer class="bg-gray-50 pt-20 pb-10">
         <div class="max-w-7xl mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between gap-12 mb-20">
-                <div class="md:w-2/3 space-y-6">
+                <div class="md:w-2/3 space-y-6 text-justify">
                     <h2 class="text-3xl font-bold text-custom-green">Quem somos</h2>
                     <p class="text-gray-700 leading-relaxed text-sm">A FleetWise nasceu com uma missão clara: transformar a gestão de frotas em Portugal, elevando-a de uma tarefa administrativa para um ativo estratégico.</p>
                     <p class="text-gray-700 leading-relaxed text-sm">Num mercado marcado pela complexidade fiscal, volatilidade energética e burocracia, as empresas precisam de parceiros que defendam os seus interesses. Somos uma consultora independente, focada exclusivamente na otimização do Custo Total de Propriedade (TCO) e na eficiência operacional.</p>
