--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
         <h2 class="text-5xl font-light mb-16 italic">Simule já!</h2>
         <div class="flex justify-center items-center space-x-8 md:space-x-20">
             <img src="https://images.unsplash.com/photo-1618843479313-40f8afb4b4d8?auto=format&fit=crop&q=80&w=400" alt="Mercedes" class="pill-image border-8 border-gray-50 shadow-2xl hidden md:block">
-            <button onclick="window.location.href='TCO_simulator.html'" class="bg-[#10b981] text-white px-12 py-5 rounded-full text-xl font-bold hover:bg-emerald-600 transition shadow-xl transform hover:scale-105">Simular!</button>
+<a href="TCO_simulator.html" class="inline-block bg-[#10b981] text-white px-12 py-5 rounded-full text-xl font-bold hover:bg-emerald-600 transition shadow-xl transform hover:scale-105 text-center">
+    Simular!
+</a>
             <img src="https://images.unsplash.com/photo-1632243193041-563d017a9dba?auto=format&fit=crop&q=80&w=400" alt="EV Car" class="pill-image border-8 border-gray-50 shadow-2xl hidden md:block">
         </div>
     </section>
